# eclypse-html-report

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build_and_deploy.yaml
