[tool.poetry]
name = "eclypse-html-report"
version = "0.1.1"
description = "A tool to generate an HTML report from the results of an ECLYPSE simulation"
authors = [
    "Valerio De Caro <valerio.decaro@di.unipi.it>",
    "Jacopo Massa <jacopo.massa@di.unipi.it>",
]
maintainers = [
    "Valerio De Caro <valerio.decaro@di.unipi.it>",
    "Jacopo Massa <jacopo.massa@di.unipi.it>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eclypse-org/eclypse-html-report"
repository = "https://github.com/eclypse-org/eclypse-html-report"

[tool.poetry.dependencies]
python = "^3.11"
datapane = "^0.17.0"
plotly = "^5.24.1"
pyvis = "^0.3.2"
click = "^8.1.7"
numpy = "<=1.26.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
commitizen = "^3.12.0"
pre-commit = "^3.5.0"
pipx = "^1.2.1"
ipykernel = "^6.27.0"
isort = "^5.13.2"
pycln = "^2.4.0"
pylint = "^3.1.0"
docformatter = { extras = ["tomli"], version = "^1.7.5" }

[tool.poetry.group.deploy]
optional = true

[tool.poetry.group.deploy.dependencies]
mypy = "^1.13.0"
wheel = "^0.45.0"
setuptools = "^75.5.0"
twine = "^5.1.1"


[build-system]
requires = ["poetry-core", "setuptools", "wheel"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false

[tool.poetry.scripts]
eclypse-html-report = "eclypse_html_report.cli:main"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:version",
    "eclypse_html_report/__init__.py:__version__",
]

[tool.pycln]
all = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 2
filter_files = true
skip_glob = ["*/__init__.py", "*/__init__.pyx"]

[tool.docformatter]
recursive = true
black = true
diff = true
tab-width = 4
